Remove the gap around the category browser [Issue #25]

--- a/app/views/stylesheets/category/browser.css
+++ b/app/views/stylesheets/category/browser.css
@@ -1,3 +1,5 @@
+#body { padding: 0em; }
+
 #categories {
   float: left;
   background: none;
